<resources>
    <string name="app_name">Book Store</string>
    <string name="register">REGISTER</string>
    <string name="login_email_or_username">Name/Email</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_background">login background</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_your_connection_status_and_try_again">Please check your connection status and try again</string>
    <string name="close">Close</string>
    <string name="no_internet_image">无网络</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_hint"><b>搜索最新图书</b></string>
    <string name="search"><b>搜索</b></string>
    <string name="google_s_new_free_app_teaches_kids_nto_read_by_listening_to_them">Google’s new free app teaches kids \nto read by listening to them</string>
    <string name="google_has_just_ripped_the_beta_label_off_rivet_its_nfree_mobile_app_designed_to_help_young_children_learn_to_read">Google has just ripped the beta label off Rivet, its \nfree mobile app designed to help young children learn to read.</string>
    <string name="back_to_beige_decoding_this_nseason_s_most_unlikely_of_the">Back to beige: decoding this season’s most unlikely, of the</string>
    <string name="as_far_as_trends_go_you_d_be_forgiven_nfor_assuming_that_beige_equals_boring">As far as trends go, you’d be forgiven \nfor assuming that beige equals boring.</string>
    <string name="author">John Mickael</string>
    <string name="read_more"><![CDATA[Read More >]]></string>
    <string name="fashion">Fashion</string>
    <string name="add_book">添加图书</string>
    <string name="add_category">添加图书类别</string>
    <string name="share">分享</string>
    <string name="log_out">登出</string>
    <string name="category_text">图书类别</string>
    <string name="add_book_name_text">书名</string>
    <string name="add_book_category_name_text">书籍类别名</string>
    <string name="add_book_author_text">作者</string>
    <string name="add_book_description_text">描述</string>
    <string name="add_book_image_text">添加图书图片</string>
    <string name="add_book__category_image_text">添加图书类别图片</string>
    <string name="create">创建</string>
    <string name="comment">评论</string>
</resources>