<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_book"
            android:icon="@drawable/ic_book"
            android:onClick="addNewBoos"
            android:title="@string/add_book"/>
        <item
            android:id="@+id/nav_add_book_category"
            android:icon="@drawable/ic_book_category"
            android:title="@string/add_category" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:onClick="logout"
            android:title="@string/log_out" />
    </group>
</menu>
