<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BookCategoriesAddActivity">

    <include layout="@layout/layout_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/add_book__category_image_text"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/add_image_category_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:src="@drawable/ic_add_image" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <EditText
            android:id="@+id/new_book_category_name"
            style="@style/addInput"
            android:hint="@string/add_book_category_name_text"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/add_new_book_category_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_add_button"
            android:text="@string/create"
            android:textColor="@color/whiteTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>